Fix spacing

--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -132,6 +132,10 @@ footer a {
     max-width: 100%;
     border-radius: 25px;
 }
+#flavor-text {
+    margin-top: -100px;
+    margin-bottom: 5vh;
+}
 
 /* Testimonials */
 .testimonials {
